# CardputerCoolOS

./: .gitignore  .gitmodules  README.md  compile_kali.sh  sdkconfig.defaults
.trae/rules/: compile-instructions.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/apps/app_audio_loopback/: audio_loopback_app.cpp  audio_loopback_app.h
main/apps/app_circuit_board/: circuit_board_app.cpp  circuit_board_app.h
main/apps/app_desktop/: desktop_app.cpp  desktop_app.h
main/apps/app_music/: music_app.cpp  music_app.h  music_player.cpp  music_player.h
main/apps/app_pictures/: pictures_app.cpp  pictures_app.h
main/apps/utils/audio/: audio.cpp
main/apps/utils/ui/: simple_list.h
main/assets/: assets.h
main/hal/: hal.cpp  hal.h
main/hal/utils/ir_nec/: ir_helper.c
